generalized the backend configuration

--- a/config/kitprog3-psoc6.cfg
+++ b/config/kitprog3-psoc6.cfg
@@ -14,13 +14,13 @@
   ],
   "args" : [
     "-s",
-    "$$PATH$$/scripts",
+    "$$EXEPATH$$/scripts",
     "-c",
     "source [find interface/kitprog3.cfg]",
     "-c",
     "source [find target/psoc6.cfg]",
     "-c",
-    "${TARGET}.cm4 configure -rtos auto -rtos-wipe-on-reset-halt 1",
+    "${TARGET}.cm0 configure -rtos auto -rtos-wipe-on-reset-halt 1",
     "-c",    
     "psoc6 sflash_restrictions 1",
     "-c",    
@@ -30,7 +30,7 @@
     "-c",    
     "psoc6 reset_halt sysresetreq"
   ],
-  "command" : [
+  "reest" : [
     "reset init",
     "reset run",
     "sleep 200",
