working on understanding how controlling the MCUs work

--- a/config/kitprog3-psoc6.cfg
+++ b/config/kitprog3-psoc6.cfg
@@ -30,10 +30,7 @@
     "-c",    
     "psoc6 reset_halt sysresetreq"
   ],
-  "reest" : [
-    "reset init",
-    "reset run",
-    "sleep 200",
-    "psoc6 reset_halt sysresetreq"
+  "restart" : [
+    "reset init"
   ]
 }
