--- a/config/kitprog3-psoc6.cfg
+++ b/config/kitprog3-psoc6.cfg
@@ -2,12 +2,12 @@
   "delay" : 2000,
   "mcus" : [
     {
-      "tag" : "cm0p",
+      "mcutag" : "cm0p",
       "beport" : 3333,
       "depends" : []
     },
     {
-      "tag" : "cm4",
+      "mcutag" : "cm4",
       "beport" : 3334,
       "depends" : ["cm0p"]
     }
@@ -20,17 +20,13 @@
     "-c",
     "source [find target/psoc6.cfg]",
     "-c",
-    "${TARGET}.cm0 configure -rtos auto -rtos-wipe-on-reset-halt 1",
-    "-c",    
+    "puts stderr {Started by BDebug}",
+    "-c",
+    "psoc6.cpu.cm0 configure -rtos auto -rtos-wipe-on-reset-halt 1",
+    "-c",
     "psoc6 sflash_restrictions 1",
-    "-c",    
-    "sleep 200",
-    "-c",    
-    "init",
-    "-c",    
-    "psoc6 reset_halt sysresetreq"
-  ],
-  "restart" : [
-    "reset init"
+    "-c",
+    "init; reset init"
   ]
 }
+  
