--- a/DebugBackend/DebugBackend.vcxproj
+++ b/DebugBackend/DebugBackend.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BackendMCU.h" />
+    <ClInclude Include="BreakpointType.h" />
     <ClInclude Include="cortexreg.h" />
     <ClInclude Include="DebugBackend.h" />
     <ClInclude Include="ISymbolProvider.h" />
