--- a/config/kitprog3-psoc6.cfg
+++ b/config/kitprog3-psoc6.cfg
@@ -4,12 +4,12 @@
     {
       "mcutag" : "cm0p",
       "beport" : 3333,
-      "depends" : []
+      "master" : true
     },
     {
       "mcutag" : "cm4",
       "beport" : 3334,
-      "depends" : ["cm0p"]
+      "master" : false,
     }
   ],
   "args" : [
